Allow using multiple API keys
Deduplicate requested and response columns